--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'com.google.dagger.hilt.android'
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-kapt'
+
 }
 
 android {
@@ -71,4 +72,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     kapt "com.google.dagger:hilt-compiler:2.44.2"
+
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
 }
